--- a/css/media-query.css
+++ b/css/media-query.css
@@ -140,7 +140,6 @@
   padding: 20px 0px 0px 20px;
 }
 .bar_s{
-  width: 0px;
   padding: 40px 0px 0px 0px;
 }
 .skill_bar {
@@ -149,12 +148,15 @@
   background-color: rgb(192,192,192,0.2);
   margin-bottom: 20px;
   margin-left: 20px;
+
 }
 .bartxt{
   font-size: 18px !important;
   padding: 5px 0px 0px 0px !important;
 }
 .acolumn {
+  padding-left: 0px;
+overflow: hidden;
 	width: 100%;
 }
 /*bar slider end*/
@@ -164,6 +166,7 @@
   /* Scale the background image to be as large as possible */
   background-size:  100% 100%;
   background-attachment: inherit;
+  overflow: hidden;
 }
 .hpcolumn {
 	margin-top: 0%;
@@ -174,7 +177,7 @@
 }
 
 .hpor{
-      font-size: 25px !important;
+      font-size: 30px !important;
       margin: 15px 0px 0px 0px;
       padding: 0px 0px 0px 0px;
 
@@ -188,13 +191,25 @@
 }
 
 .buttonh {
-    padding: 10px 50px;
-    font-size: 16px;
+    padding: 8px 20px;
+    font-size: 17px;
 
 
 }
 /*product container end*/
-
+/*sliders*/
+.dslider{
+  margin-top: 24%;
+  animation: none !important;
+  overflow: hidden;
+}
+.cslider{
+  margin-top: 24%;
+  margin-bottom: 15%;
+  animation: none !important;
+  overflow: hidden;
+}
+/*sliders end*/
 /*home page end*/
 }
 
